fixing spacing

--- a/less/index.less
+++ b/less/index.less
@@ -63,6 +63,7 @@ table {
 
 @bgColor:#e9ecf7; 
 @mobile: (max-width 500px); 
+@tablet: (max-width 800px); 
 
 
 * {
@@ -73,19 +74,26 @@ html, body {
 	height: 100%;
 	font-size: 62.5%; 
 	font-family: 'Aleo', serif; 
-	
-
-	//here
 }
 
 
 
 header {
-	@media (max-width: 500px) {
+	.flex(); 
+	font-size: 12pt; 
+	margin: auto; 
+
+
+	@media @mobile {
 		.flex(); 
 		font-size: 12pt; 
 		margin: auto; 
 		}
+	@media @tablet {
+			.flex(); 
+			font-size: 12pt; 
+			margin: auto; 
+			}
 	}
 
 
@@ -93,22 +101,25 @@ nav {
 	display: flex; 
 	justify-content: flex-end; 
 	padding: 3%; 
-	.border(); 
-	background-color: gold; 
-		@media (max-width: 500px) {
-			nav {
-				justify-content: center;
-				background-color: #e8ed9a; 
+		@media @mobile {
+		 justify-content: center;
+		 background-color: #e8ed9a; 
 				}
+		@media @tablet {
+			justify-content: flex-start;
+			background-color: #e9ecf7; 
+		}
 			}
-	 
-	}
 
 
 
 .nav a {
 		font-size: 2rem; 
-		padding: 2%; 
+		padding: 25px 10px 0 10px; 
+		justify-content: space-between;
+		text-decoration: none;
+		align-content: flex-start;
+		color: #000000; 
 			&:hover {
 			background-color: #daffee;  
 			}
